--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./src/bin/www"
   },
   "dependencies": {
     "colors": "^1.2.1",
@@ -15,7 +15,8 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.0.14",
     "morgan": "~1.9.0",
-    "npm": "^5.8.0"
+    "npm": "^5.8.0",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
